--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "gulp-sass": "latest",
     "gulp-ttf2woff": "latest",
     "gulp-ttf2woff2": "^4.0.1",
-    "gulp-uglify-es": "latest",
     "imagemin-webp": "latest",
     "sass": "latest",
     "transform-runtime": "0.0.0",
     "webp-converter": "2.2.3"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "core-js": "^3.15.2",
     "css-loader": "^6.2.0",
     "gulp-debug": "^4.0.0",
