--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-ttf2woff": "latest",
     "gulp-ttf2woff2": "^4.0.1",
     "imagemin-webp": "latest",
+    "nouislider": "^15.5.0",
     "sass": "latest",
     "transform-runtime": "0.0.0",
     "vinyl-named": "^1.1.0",
