--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "webp-converter": "2.2.3"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
     "core-js": "^3.15.2",
     "css-loader": "^6.2.0",
     "gulp-debug": "^4.0.0",
@@ -40,5 +39,10 @@
     "swiper": "^7.0.3",
     "webpack-stream": "^7.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ]
 }
