--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   "type": "module",
   "browserslist": [
     "defaults",
-    "not IE 11",
-    "maintained node versions"
+    "not IE 11"
   ]
 }
